--- a/www/templates/org.html
+++ b/www/templates/org.html
@@ -29,7 +29,7 @@
         
         <div ng-show="group!==null && group.leader!=null" class="content tc" style="width:100%;height: 100%; padding-bottom: 5em;">
             
-            <org group="group"></org>
+            <org group="group" title="{{selectedCriteria.banci.shift_code}}"></org>
         </div>
     </ion-content>
     <ion-footer-bar style="">
@@ -52,6 +52,7 @@
             <div class="name">日期</div>
             <div class="value">&nbsp;<span ng-bind="metaData.bianzhi_date"></span></div>
         </div></div>
+        
     </div>
     <div class="clear"></div>
     <div class="quickNav">
