--- a/www/templates/green-cross.html
+++ b/www/templates/green-cross.html
@@ -20,10 +20,10 @@
 	  	<div></div>
 	</ion-header-bar>
     <ion-content scroll="false" on-double-tap="goHome('cross')">
-			<div class="content-wrapper green-calendar" style="height: calc(100% - 6em);padding:0;">
-				<div style="height: 100%;">
+			<div class="content-wrapper green-calendar" style="height: calc(100% - 8em);padding:0;">
+				<div style="height: 100%;padding: 2em;">
 				<p style="padding-top: 2em;" class="anji-theme" ng-if="isLoading">加载中...</p>
-				<table id="greenCrossTable" style="height: 80%; top: 10%; position: relative; width: {{tableWidth}}px">
+				<table id="greenCrossTable" style="height: 100%; position: relative; width: {{tableWidth}}px">
 					<tbody>
 					<tr>
 						<td class="empty">&nbsp;</td>
